[package]
name         = "nrr"
version      = "0.10.0"
edition      = "2021"
rust-version = "1.80"

description = "Minimal, blazing fast npm scripts runner"
authors     = ["Ryan Cao <hello@ryanccn.dev>"]
license     = "GPL-3.0-only"
repository  = "https://github.com/ryanccn/nrr.git"

categories = ["command-line-utilities", "development-tools"]
keywords   = ["cli", "node", "javascript", "npm", "scripts"]

[dependencies]
ahash         = "0.8.11"
clap          = { version = "4.5.31", features = ["derive", "env"] }
clap_complete = { version = "4.5.46", features = ["unstable-dynamic"] }
color-eyre    = { version = "0.6.3", default-features = false }
ctrlc         = "3.4.5"
dotenvy       = "0.15.7"
indexmap      = { version = "2.7.1", features = ["serde"] }
itoa          = "1.0.15"
owo-colors    = { version = "4.2.0", features = ["supports-colors"] }
serde         = { version = "1.0.218", features = ["derive"] }
shlex         = "1.3.0"
simd-json     = "0.14.3"
strsim        = "0.11.1"
terminal_size = "0.4.1"
unicode-width = "0.2.0"

[dev-dependencies]
trycmd = "0.15.9"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf     = { level = "warn", priority = -1 }

redundant_closure                  = "allow"
redundant_closure_for_method_calls = "allow"
module_name_repetitions            = "allow"

[lints.rust]
unsafe_code = "forbid"
