[package]
name         = "nrr"
version      = "0.10.3"
edition      = "2024"
rust-version = "1.85"

description = "Minimal, blazing fast npm scripts runner"
authors     = ["Ryan Cao <hello@ryanccn.dev>"]
license     = "GPL-3.0-only"
repository  = "https://github.com/ryanccn/nrr.git"

categories = ["command-line-utilities", "development-tools"]
keywords   = ["cli", "node", "javascript", "npm", "scripts"]

[dependencies]
ahash         = "0.8.12"
clap          = { version = "4.5.45", features = ["derive", "env"] }
clap_complete = { version = "4.5.54", features = ["unstable-dynamic"] }
color-eyre    = { version = "0.6.5", default-features = false }
dotenvy       = "0.15.7"
indexmap      = { version = "2.10.0", features = ["serde"] }
itoa          = "1.0.15"
owo-colors    = { version = "4.2.2", features = ["supports-colors"] }
serde         = { version = "1.0.219", features = ["derive"] }
shlex         = "1.3.0"
signal-hook   = "0.3.18"
simd-json     = "0.15.1"
strsim        = "0.11.1"
terminal_size = "0.4.2"
unicode-width = "0.2.1"

[target."cfg(unix)".dependencies]
rustix = { version = "1.0.7", features = ["fs"] }

[target."cfg(windows)".dependencies]
winsafe = { version = "0.0.24", features = ["kernel"] }

[dev-dependencies]
trycmd = "0.15.9"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf     = { level = "warn", priority = -1 }

redundant_closure                  = "allow"
redundant_closure_for_method_calls = "allow"
module_name_repetitions            = "allow"

[lints.rust]
unsafe_code = "forbid"
